// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib preset > falls back to projectService when tsconfigs omitted 1`] = `
[
  {
    "ignores": [
      "eslint.config.mjs",
      "dist/**",
      "node_modules/**",
      "coverage/**",
      "*.config.ts",
    ],
  },
  {
    "name": "@eslint/js/recommended",
    "rules": {
      "constructor-super": "error",
      "for-direction": "error",
      "getter-return": "error",
      "no-async-promise-executor": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": "error",
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-args": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-ex-assign": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-native-nonconstructor": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-octal": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-this-before-super": "error",
      "no-unassigned-vars": "error",
      "no-undef": "error",
      "no-unexpected-multiline": "error",
      "no-unreachable": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-unused-vars": "error",
      "no-useless-assignment": "error",
      "no-useless-backreference": "error",
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-with": "error",
      "preserve-caught-error": "error",
      "require-yield": "error",
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  {
    "languageOptions": {
      "sourceType": "module",
    },
    "name": "typescript-eslint/base",
    "plugins": [
      "@typescript-eslint",
    ],
  },
  {
    "files": [
      "**/*.ts",
      "**/*.tsx",
      "**/*.mts",
      "**/*.cts",
    ],
    "name": "typescript-eslint/eslint-recommended",
    "rules": {
      "constructor-super": "off",
      "getter-return": "off",
      "no-class-assign": "off",
      "no-const-assign": "off",
      "no-dupe-args": "off",
      "no-dupe-class-members": "off",
      "no-dupe-keys": "off",
      "no-func-assign": "off",
      "no-import-assign": "off",
      "no-new-native-nonconstructor": "off",
      "no-new-symbol": "off",
      "no-obj-calls": "off",
      "no-redeclare": "off",
      "no-setter-return": "off",
      "no-this-before-super": "off",
      "no-undef": "off",
      "no-unreachable": "off",
      "no-unsafe-negation": "off",
      "no-var": "error",
      "no-with": "off",
      "prefer-const": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
    },
  },
  {
    "name": "typescript-eslint/recommended-type-checked",
    "rules": {
      "@typescript-eslint/await-thenable": "error",
      "@typescript-eslint/ban-ts-comment": "error",
      "@typescript-eslint/no-array-constructor": "error",
      "@typescript-eslint/no-array-delete": "error",
      "@typescript-eslint/no-base-to-string": "error",
      "@typescript-eslint/no-duplicate-enum-values": "error",
      "@typescript-eslint/no-duplicate-type-constituents": "error",
      "@typescript-eslint/no-empty-object-type": "error",
      "@typescript-eslint/no-explicit-any": "error",
      "@typescript-eslint/no-extra-non-null-assertion": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "@typescript-eslint/no-for-in-array": "error",
      "@typescript-eslint/no-implied-eval": "error",
      "@typescript-eslint/no-misused-new": "error",
      "@typescript-eslint/no-misused-promises": "error",
      "@typescript-eslint/no-namespace": "error",
      "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
      "@typescript-eslint/no-redundant-type-constituents": "error",
      "@typescript-eslint/no-require-imports": "error",
      "@typescript-eslint/no-this-alias": "error",
      "@typescript-eslint/no-unnecessary-type-assertion": "error",
      "@typescript-eslint/no-unnecessary-type-constraint": "error",
      "@typescript-eslint/no-unsafe-argument": "error",
      "@typescript-eslint/no-unsafe-assignment": "error",
      "@typescript-eslint/no-unsafe-call": "error",
      "@typescript-eslint/no-unsafe-declaration-merging": "error",
      "@typescript-eslint/no-unsafe-enum-comparison": "error",
      "@typescript-eslint/no-unsafe-function-type": "error",
      "@typescript-eslint/no-unsafe-member-access": "error",
      "@typescript-eslint/no-unsafe-return": "error",
      "@typescript-eslint/no-unsafe-unary-minus": "error",
      "@typescript-eslint/no-unused-expressions": "error",
      "@typescript-eslint/no-unused-vars": "error",
      "@typescript-eslint/no-wrapper-object-types": "error",
      "@typescript-eslint/only-throw-error": "error",
      "@typescript-eslint/prefer-as-const": "error",
      "@typescript-eslint/prefer-namespace-keyword": "error",
      "@typescript-eslint/prefer-promise-reject-errors": "error",
      "@typescript-eslint/require-await": "error",
      "@typescript-eslint/restrict-plus-operands": "error",
      "@typescript-eslint/restrict-template-expressions": "error",
      "@typescript-eslint/triple-slash-reference": "error",
      "@typescript-eslint/unbound-method": "error",
      "no-array-constructor": "off",
      "no-implied-eval": "off",
      "no-throw-literal": "off",
      "no-unused-expressions": "off",
      "no-unused-vars": "off",
      "prefer-promise-reject-errors": "off",
      "require-await": "off",
    },
  },
  {
    "languageOptions": {
      "globals": [
        "AbortController",
        "AbortSignal",
        "AsyncDisposableStack",
        "Blob",
        "BroadcastChannel",
        "Buffer",
        "ByteLengthQueuingStrategy",
        "CloseEvent",
        "CompressionStream",
        "CountQueuingStrategy",
        "Crypto",
        "CryptoKey",
        "CustomEvent",
        "DOMException",
        "DecompressionStream",
        "DisposableStack",
        "ErrorEvent",
        "Event",
        "EventTarget",
        "File",
        "FormData",
        "Headers",
        "MessageChannel",
        "MessageEvent",
        "MessagePort",
        "Navigator",
        "Performance",
        "PerformanceEntry",
        "PerformanceMark",
        "PerformanceMeasure",
        "PerformanceObserver",
        "PerformanceObserverEntryList",
        "PerformanceResourceTiming",
        "ReadableByteStreamController",
        "ReadableStream",
        "ReadableStreamBYOBReader",
        "ReadableStreamBYOBRequest",
        "ReadableStreamDefaultController",
        "ReadableStreamDefaultReader",
        "Request",
        "Response",
        "Storage",
        "SubtleCrypto",
        "SuppressedError",
        "TextDecoder",
        "TextDecoderStream",
        "TextEncoder",
        "TextEncoderStream",
        "TransformStream",
        "TransformStreamDefaultController",
        "URL",
        "URLPattern",
        "URLSearchParams",
        "WebAssembly",
        "WebSocket",
        "WritableStream",
        "WritableStreamDefaultController",
        "WritableStreamDefaultWriter",
        "__dirname",
        "__filename",
        "atob",
        "btoa",
        "clearImmediate",
        "clearInterval",
        "clearTimeout",
        "console",
        "crypto",
        "exports",
        "fetch",
        "global",
        "localStorage",
        "module",
        "navigator",
        "performance",
        "process",
        "queueMicrotask",
        "require",
        "sessionStorage",
        "setImmediate",
        "setInterval",
        "setTimeout",
        "structuredClone",
      ],
      "parserOptions": {
        "projectService": true,
        "tsconfigRootDir": "<rootDir>",
      },
      "sourceType": "module",
    },
  },
  {
    "plugins": [
      "@stylistic",
    ],
    "rules": {
      "@stylistic/array-bracket-spacing": [
        "warn",
        "never",
      ],
      "@stylistic/arrow-parens": [
        "warn",
        "always",
      ],
      "@stylistic/block-spacing": "warn",
      "@stylistic/brace-style": [
        "warn",
        "1tbs",
        {
          "allowSingleLine": true,
        },
      ],
      "@stylistic/comma-dangle": [
        "error",
        "never",
      ],
      "@stylistic/comma-spacing": "warn",
      "@stylistic/eol-last": [
        "warn",
        "always",
      ],
      "@stylistic/indent": [
        "warn",
        4,
        {
          "SwitchCase": 1,
        },
      ],
      "@stylistic/key-spacing": "warn",
      "@stylistic/keyword-spacing": "warn",
      "@stylistic/member-delimiter-style": [
        "warn",
        {
          "multiline": {
            "delimiter": "semi",
            "requireLast": true,
          },
          "singleline": {
            "delimiter": "semi",
            "requireLast": false,
          },
        },
      ],
      "@stylistic/no-multiple-empty-lines": [
        "warn",
        {
          "max": 2,
          "maxBOF": 0,
          "maxEOF": 1,
        },
      ],
      "@stylistic/no-trailing-spaces": "warn",
      "@stylistic/object-curly-spacing": [
        "warn",
        "never",
      ],
      "@stylistic/quotes": [
        "warn",
        "single",
        {
          "avoidEscape": true,
        },
      ],
      "@stylistic/semi": [
        "warn",
        "always",
      ],
      "@stylistic/space-before-blocks": "warn",
      "@stylistic/space-before-function-paren": [
        "warn",
        {
          "anonymous": "always",
          "asyncArrow": "always",
          "named": "never",
        },
      ],
      "@stylistic/space-infix-ops": "warn",
      "@stylistic/type-annotation-spacing": "warn",
    },
  },
  {
    "rules": {
      "@typescript-eslint/consistent-type-imports": [
        "error",
        {
          "disallowTypeAnnotations": false,
          "fixStyle": "inline-type-imports",
          "prefer": "type-imports",
        },
      ],
      "@typescript-eslint/naming-convention": [
        "warn",
        {
          "format": [
            "camelCase",
            "UPPER_CASE",
            "PascalCase",
          ],
          "leadingUnderscore": "forbid",
          "selector": "variable",
        },
        {
          "format": [
            "camelCase",
          ],
          "selector": "function",
        },
        {
          "format": [
            "PascalCase",
          ],
          "selector": "typeLike",
        },
        {
          "format": [
            "PascalCase",
          ],
          "selector": "enumMember",
        },
        {
          "format": [
            "camelCase",
          ],
          "leadingUnderscore": "forbid",
          "selector": "classMethod",
        },
        {
          "format": [
            "camelCase",
            "UPPER_CASE",
          ],
          "leadingUnderscore": "forbid",
          "selector": "classProperty",
        },
        {
          "format": null,
          "selector": "objectLiteralProperty",
        },
        {
          "format": [
            "camelCase",
          ],
          "leadingUnderscore": "forbid",
          "selector": "parameter",
        },
      ],
      "@typescript-eslint/no-explicit-any": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "@typescript-eslint/no-unsafe-argument": "error",
      "@typescript-eslint/no-unsafe-assignment": "error",
      "@typescript-eslint/no-unsafe-call": "error",
      "@typescript-eslint/no-unsafe-member-access": "error",
      "@typescript-eslint/no-unsafe-return": "error",
      "@typescript-eslint/no-unused-vars": "error",
      "@typescript-eslint/require-await": "error",
    },
  },
  {
    "rules": {
      "@typescript-eslint/no-useless-constructor": "warn",
      "@typescript-eslint/only-throw-error": "error",
      "curly": [
        "warn",
        "all",
      ],
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "no-console": "error",
      "no-duplicate-imports": "warn",
      "no-restricted-exports": [
        "warn",
        {
          "restrictDefaultExports": {
            "defaultFrom": true,
            "direct": true,
            "named": true,
            "namedFrom": true,
            "namespaceFrom": true,
          },
        },
      ],
      "no-throw-literal": "off",
      "no-useless-constructor": "off",
      "no-var": "error",
      "prefer-const": "warn",
      "prefer-rest-params": "warn",
      "prefer-spread": "warn",
      "prefer-template": "warn",
    },
  },
  {
    "files": [
      "test/**/*.ts",
    ],
    "rules": {
      "@typescript-eslint/no-non-null-assertion": "off",
      "@typescript-eslint/no-unsafe-member-access": "off",
      "@typescript-eslint/require-await": "off",
      "no-console": "off",
    },
  },
]
`;

exports[`lib preset > matches snapshot with explicit tsconfigs 1`] = `
[
  {
    "ignores": [
      "eslint.config.mjs",
      "dist/**",
      "node_modules/**",
      "coverage/**",
      "*.config.ts",
    ],
  },
  {
    "name": "@eslint/js/recommended",
    "rules": {
      "constructor-super": "error",
      "for-direction": "error",
      "getter-return": "error",
      "no-async-promise-executor": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": "error",
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-args": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-ex-assign": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-native-nonconstructor": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-octal": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-this-before-super": "error",
      "no-unassigned-vars": "error",
      "no-undef": "error",
      "no-unexpected-multiline": "error",
      "no-unreachable": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-unused-vars": "error",
      "no-useless-assignment": "error",
      "no-useless-backreference": "error",
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-with": "error",
      "preserve-caught-error": "error",
      "require-yield": "error",
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  {
    "languageOptions": {
      "sourceType": "module",
    },
    "name": "typescript-eslint/base",
    "plugins": [
      "@typescript-eslint",
    ],
  },
  {
    "files": [
      "**/*.ts",
      "**/*.tsx",
      "**/*.mts",
      "**/*.cts",
    ],
    "name": "typescript-eslint/eslint-recommended",
    "rules": {
      "constructor-super": "off",
      "getter-return": "off",
      "no-class-assign": "off",
      "no-const-assign": "off",
      "no-dupe-args": "off",
      "no-dupe-class-members": "off",
      "no-dupe-keys": "off",
      "no-func-assign": "off",
      "no-import-assign": "off",
      "no-new-native-nonconstructor": "off",
      "no-new-symbol": "off",
      "no-obj-calls": "off",
      "no-redeclare": "off",
      "no-setter-return": "off",
      "no-this-before-super": "off",
      "no-undef": "off",
      "no-unreachable": "off",
      "no-unsafe-negation": "off",
      "no-var": "error",
      "no-with": "off",
      "prefer-const": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
    },
  },
  {
    "name": "typescript-eslint/recommended-type-checked",
    "rules": {
      "@typescript-eslint/await-thenable": "error",
      "@typescript-eslint/ban-ts-comment": "error",
      "@typescript-eslint/no-array-constructor": "error",
      "@typescript-eslint/no-array-delete": "error",
      "@typescript-eslint/no-base-to-string": "error",
      "@typescript-eslint/no-duplicate-enum-values": "error",
      "@typescript-eslint/no-duplicate-type-constituents": "error",
      "@typescript-eslint/no-empty-object-type": "error",
      "@typescript-eslint/no-explicit-any": "error",
      "@typescript-eslint/no-extra-non-null-assertion": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "@typescript-eslint/no-for-in-array": "error",
      "@typescript-eslint/no-implied-eval": "error",
      "@typescript-eslint/no-misused-new": "error",
      "@typescript-eslint/no-misused-promises": "error",
      "@typescript-eslint/no-namespace": "error",
      "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
      "@typescript-eslint/no-redundant-type-constituents": "error",
      "@typescript-eslint/no-require-imports": "error",
      "@typescript-eslint/no-this-alias": "error",
      "@typescript-eslint/no-unnecessary-type-assertion": "error",
      "@typescript-eslint/no-unnecessary-type-constraint": "error",
      "@typescript-eslint/no-unsafe-argument": "error",
      "@typescript-eslint/no-unsafe-assignment": "error",
      "@typescript-eslint/no-unsafe-call": "error",
      "@typescript-eslint/no-unsafe-declaration-merging": "error",
      "@typescript-eslint/no-unsafe-enum-comparison": "error",
      "@typescript-eslint/no-unsafe-function-type": "error",
      "@typescript-eslint/no-unsafe-member-access": "error",
      "@typescript-eslint/no-unsafe-return": "error",
      "@typescript-eslint/no-unsafe-unary-minus": "error",
      "@typescript-eslint/no-unused-expressions": "error",
      "@typescript-eslint/no-unused-vars": "error",
      "@typescript-eslint/no-wrapper-object-types": "error",
      "@typescript-eslint/only-throw-error": "error",
      "@typescript-eslint/prefer-as-const": "error",
      "@typescript-eslint/prefer-namespace-keyword": "error",
      "@typescript-eslint/prefer-promise-reject-errors": "error",
      "@typescript-eslint/require-await": "error",
      "@typescript-eslint/restrict-plus-operands": "error",
      "@typescript-eslint/restrict-template-expressions": "error",
      "@typescript-eslint/triple-slash-reference": "error",
      "@typescript-eslint/unbound-method": "error",
      "no-array-constructor": "off",
      "no-implied-eval": "off",
      "no-throw-literal": "off",
      "no-unused-expressions": "off",
      "no-unused-vars": "off",
      "prefer-promise-reject-errors": "off",
      "require-await": "off",
    },
  },
  {
    "languageOptions": {
      "globals": [
        "AbortController",
        "AbortSignal",
        "AsyncDisposableStack",
        "Blob",
        "BroadcastChannel",
        "Buffer",
        "ByteLengthQueuingStrategy",
        "CloseEvent",
        "CompressionStream",
        "CountQueuingStrategy",
        "Crypto",
        "CryptoKey",
        "CustomEvent",
        "DOMException",
        "DecompressionStream",
        "DisposableStack",
        "ErrorEvent",
        "Event",
        "EventTarget",
        "File",
        "FormData",
        "Headers",
        "MessageChannel",
        "MessageEvent",
        "MessagePort",
        "Navigator",
        "Performance",
        "PerformanceEntry",
        "PerformanceMark",
        "PerformanceMeasure",
        "PerformanceObserver",
        "PerformanceObserverEntryList",
        "PerformanceResourceTiming",
        "ReadableByteStreamController",
        "ReadableStream",
        "ReadableStreamBYOBReader",
        "ReadableStreamBYOBRequest",
        "ReadableStreamDefaultController",
        "ReadableStreamDefaultReader",
        "Request",
        "Response",
        "Storage",
        "SubtleCrypto",
        "SuppressedError",
        "TextDecoder",
        "TextDecoderStream",
        "TextEncoder",
        "TextEncoderStream",
        "TransformStream",
        "TransformStreamDefaultController",
        "URL",
        "URLPattern",
        "URLSearchParams",
        "WebAssembly",
        "WebSocket",
        "WritableStream",
        "WritableStreamDefaultController",
        "WritableStreamDefaultWriter",
        "__dirname",
        "__filename",
        "atob",
        "btoa",
        "clearImmediate",
        "clearInterval",
        "clearTimeout",
        "console",
        "crypto",
        "exports",
        "fetch",
        "global",
        "localStorage",
        "module",
        "navigator",
        "performance",
        "process",
        "queueMicrotask",
        "require",
        "sessionStorage",
        "setImmediate",
        "setInterval",
        "setTimeout",
        "structuredClone",
      ],
      "parserOptions": {
        "project": [
          "./tsconfig.json",
          "./tsconfig.test.json",
        ],
        "tsconfigRootDir": "<rootDir>",
      },
      "sourceType": "module",
    },
  },
  {
    "plugins": [
      "@stylistic",
    ],
    "rules": {
      "@stylistic/array-bracket-spacing": [
        "warn",
        "never",
      ],
      "@stylistic/arrow-parens": [
        "warn",
        "always",
      ],
      "@stylistic/block-spacing": "warn",
      "@stylistic/brace-style": [
        "warn",
        "1tbs",
        {
          "allowSingleLine": true,
        },
      ],
      "@stylistic/comma-dangle": [
        "error",
        "never",
      ],
      "@stylistic/comma-spacing": "warn",
      "@stylistic/eol-last": [
        "warn",
        "always",
      ],
      "@stylistic/indent": [
        "warn",
        4,
        {
          "SwitchCase": 1,
        },
      ],
      "@stylistic/key-spacing": "warn",
      "@stylistic/keyword-spacing": "warn",
      "@stylistic/member-delimiter-style": [
        "warn",
        {
          "multiline": {
            "delimiter": "semi",
            "requireLast": true,
          },
          "singleline": {
            "delimiter": "semi",
            "requireLast": false,
          },
        },
      ],
      "@stylistic/no-multiple-empty-lines": [
        "warn",
        {
          "max": 2,
          "maxBOF": 0,
          "maxEOF": 1,
        },
      ],
      "@stylistic/no-trailing-spaces": "warn",
      "@stylistic/object-curly-spacing": [
        "warn",
        "never",
      ],
      "@stylistic/quotes": [
        "warn",
        "single",
        {
          "avoidEscape": true,
        },
      ],
      "@stylistic/semi": [
        "warn",
        "always",
      ],
      "@stylistic/space-before-blocks": "warn",
      "@stylistic/space-before-function-paren": [
        "warn",
        {
          "anonymous": "always",
          "asyncArrow": "always",
          "named": "never",
        },
      ],
      "@stylistic/space-infix-ops": "warn",
      "@stylistic/type-annotation-spacing": "warn",
    },
  },
  {
    "rules": {
      "@typescript-eslint/consistent-type-imports": [
        "error",
        {
          "disallowTypeAnnotations": false,
          "fixStyle": "inline-type-imports",
          "prefer": "type-imports",
        },
      ],
      "@typescript-eslint/naming-convention": [
        "warn",
        {
          "format": [
            "camelCase",
            "UPPER_CASE",
            "PascalCase",
          ],
          "leadingUnderscore": "forbid",
          "selector": "variable",
        },
        {
          "format": [
            "camelCase",
          ],
          "selector": "function",
        },
        {
          "format": [
            "PascalCase",
          ],
          "selector": "typeLike",
        },
        {
          "format": [
            "PascalCase",
          ],
          "selector": "enumMember",
        },
        {
          "format": [
            "camelCase",
          ],
          "leadingUnderscore": "forbid",
          "selector": "classMethod",
        },
        {
          "format": [
            "camelCase",
            "UPPER_CASE",
          ],
          "leadingUnderscore": "forbid",
          "selector": "classProperty",
        },
        {
          "format": null,
          "selector": "objectLiteralProperty",
        },
        {
          "format": [
            "camelCase",
          ],
          "leadingUnderscore": "forbid",
          "selector": "parameter",
        },
      ],
      "@typescript-eslint/no-explicit-any": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "@typescript-eslint/no-unsafe-argument": "error",
      "@typescript-eslint/no-unsafe-assignment": "error",
      "@typescript-eslint/no-unsafe-call": "error",
      "@typescript-eslint/no-unsafe-member-access": "error",
      "@typescript-eslint/no-unsafe-return": "error",
      "@typescript-eslint/no-unused-vars": "error",
      "@typescript-eslint/require-await": "error",
    },
  },
  {
    "rules": {
      "@typescript-eslint/no-useless-constructor": "warn",
      "@typescript-eslint/only-throw-error": "error",
      "curly": [
        "warn",
        "all",
      ],
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "no-console": "error",
      "no-duplicate-imports": "warn",
      "no-restricted-exports": [
        "warn",
        {
          "restrictDefaultExports": {
            "defaultFrom": true,
            "direct": true,
            "named": true,
            "namedFrom": true,
            "namespaceFrom": true,
          },
        },
      ],
      "no-throw-literal": "off",
      "no-useless-constructor": "off",
      "no-var": "error",
      "prefer-const": "warn",
      "prefer-rest-params": "warn",
      "prefer-spread": "warn",
      "prefer-template": "warn",
    },
  },
  {
    "files": [
      "test/**/*.ts",
    ],
    "rules": {
      "@typescript-eslint/no-non-null-assertion": "off",
      "@typescript-eslint/no-unsafe-member-access": "off",
      "@typescript-eslint/require-await": "off",
      "no-console": "off",
    },
  },
]
`;
